// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AggregateOffer test Render Aggregate Offer with all props 1`] = `
<div
  itemScope={true}
  itemType="https://schema.org/AggregateOffer"
>
  <meta
    content="600"
    itemProp="lowPrice"
  />
  <meta
    content="RUR"
    itemProp="priceCurrency"
  />
  <link
    href="https://schema.org/InStock"
    itemProp="availability"
  />
  <meta
    content="1300"
    itemProp="highPrice"
  />
  <meta
    content="20"
    itemProp="offerCount"
  />
</div>
`;

exports[`AggregateOffer test Render Aggregate Offer with only required props 1`] = `
<div
  itemScope={true}
  itemType="https://schema.org/AggregateOffer"
>
  <meta
    content="RUR"
    itemProp="priceCurrency"
  />
</div>
`;
